terminate the design

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div id="container">
             <div class="sections" id="text_container">
                 <div id="message">
-                    <p><span id="bonjour">Bonjour</span>, je m'appel Séraphin Mukuna, je suis étudiant à la faculté des sciences informatiques à l'Université Protéstante de Lubumbashu (UPL)</p>
+                    <p><span id="bonjour">Bonjour</span>, je m'appel <span id="seraphin">SERAPHIN MUKUNA</span>, je suis étudiant à la faculté des sciences informatiques à l'Université Protéstante de Lubumbashu (UPL)</p>
                     <p>Je suis developpeur web frontend, je peut faire de l'HTML5 et du CSS3, si vous avez besoins de mes services : </p>
                     <a id="contactBtn" href="mailto:serakadima8@gmail.com">contactez-moi</a>
                     <a id="link" href="https://www.facebook.com/seraphin.kadima.9"><img src="images/facebook_icon-icons.com_59205.png" id="logo" alt=""></a>
